PROJECT( CANVAS )
CMAKE_MINIMUM_REQUIRED( VERSION 2.8.4 )

SET( HEADERS image.hpp image8.cpp image16.hpp image32.hpp )
SET( SOURCES image.cpp image8.cpp image16.cpp image32.cpp )

SET( CMAKE_INSTALL_PREFIX $ENV{WS_INSTALL} )

ADD_LIBRARY( canvas SHARED ${SOURCES} )

GET_FILENAME_COMPONENT( PARENT_DIR ${CMAKE_SOURCE_DIR} PATH )

INCLUDE_DIRECTORIES( ${PARENT_DIR} $ENV{WS_INSTALL}/include )

FIND_LIBRARY( GDAL gdal )
IF( GDAL )
  TARGET_LINK_LIBRARIES( canvas ${GDAL} )
ENDIF( GDAL )

IF( CYGWIN )
  FIND_LIBRARY( CGAL CGAL )
  TARGET_LINK_LIBRARIES( canvas ${CGAL} )
  FIND_LIBRARY( CGAL_Core CGAL_Core )
  TARGET_LINK_LIBRARIES( canvas ${CGAL_Core} )
  FIND_LIBRARY( GMP gmp )
  TARGET_LINK_LIBRARIES( canvas ${GMP} )
  FIND_LIBRARY( MPFR mpfr )
  TARGET_LINK_LIBRARIES( canvas ${MPRF} )
ELSE( CYGWIN )
  FIND_PACKAGE( CGAL REQUIRED COMPONENTS CGAL Core )
  IF( CGAL_FOUND )
    INCLUDE_DIRECTORIES( ${CGAL_INCLUDE_DIRS} )
    TARGET_LINK_LIBRARIES( canvas ${CGAL_LIBRARIES} )
    MESSAGE( "${CGAL_LIBRARIES}" )
  ENDIF( CGAL_FOUND )
ENDIF( CYGWIN )

FIND_PACKAGE( Boost REQUIRED COMPONENTS filesystem system thread )
IF( Boost_FOUND )
  INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIRS} )
  TARGET_LINK_LIBRARIES( canvas ${Boost_LIBRARIES} )
ENDIF( Boost_FOUND )

IF( UNIX )
  INSTALL( TARGETS canvas DESTINATION lib )
ELSE( UNIX )
  INSTALL( TARGETS canvas DESTINATION bin )
ENDIF( UNIX )

INSTALL( FILES ${HEADERS} DESTINATION include/canvas )

# GET_PROPERTY( DIRS DIRECTORY PROPERTY INCLUDE_DIRECTORIES )
# FOREACH( DIR ${DIRS} )
#   MESSAGE( ${DIR} )
# ENDFOREACH()
