PROJECT( UTILITY )
CMAKE_MINIMUM_REQUIRED( VERSION 2.8.4 )

SET( HEADERS algorithm.hpp compat.hpp mapped_memory.hpp utility.hpp )
SET( SOURCES compat.cpp )

SET( CMAKE_INSTALL_PREFIX $ENV{WS_INSTALL} )

ADD_LIBRARY( utility SHARED ${SOURCES} )

GET_FILENAME_COMPONENT( PARENT_DIR ${CMAKE_SOURCE_DIR} PATH )

INCLUDE_DIRECTORIES( ${PARENT_DIR} $ENV{WS_INSTALL}/include )

FIND_PACKAGE( Boost REQUIRED COMPONENTS date_time )
IF( Boost_FOUND )
  INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIRS} )
  TARGET_LINK_LIBRARIES( utility ${Boost_LIBRARIES} )
ENDIF( Boost_FOUND )

INSTALL( FILES ${HEADERS} DESTINATION include/utility )

IF( CYGWIN )
  INSTALL( FILES cygutility.dll DESTINATION bin )
  INSTALL( FILES libutility.dll.a DESTINATION lib )
ELSE( CYGWIN )
  INSTALL( TARGETS utility DESTINATION lib )
ENDIF( CYGWIN )
